<resources>
    <string name="app_name">Who is That</string>
    <string name="drawer_switch">Open</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_function_onoff">Who is That On / Off</string>

    <string name="pref_title_listen_time">Listen Time</string>
    <string-array name="default_listen_time_titles">
        <item>90</item>
        <item>80</item>
        <item>70</item>
        <item>60</item>
        <item>50</item>
        <item>40</item>
        <item>30</item>
    </string-array>
    <string-array name="default_listen_time_values">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <string name="pref_title_listen_list">Continue Listen Options</string>
    <string-array name="pref_listen_list_titles">
        <item>Sender Name</item>
        <item>Sender name + Sender Content</item>
        <item>Both</item>
    </string-array>
    <string-array name="pref_listen_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

<string name="pref_title_notifications_filter">Notifications Filter</string>

<string name="pref_title_pause_time">Pause Time</string>
    <string-array name="pref_pause_time">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="pref_pause_time_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="sms_label">Latest SMS</string>
    <string name="none">None</string>
    <string name="speech_toggle_on">START SPEAKING</string>
    <string name="speech_toggle_off">STOP SPEAKING</string>

    <string name="start_speaking">Okay! I will read your messages out loud for you now.</string>
    <string name="stop_speaking">Okay! I will stay silent now.</string>
</resources>
