<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_function_onoff" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:icon="@mipmap/ic_action_listen"
        android:defaultValue="-1"
        android:entries="@array/pref_listen_list_titles"
        android:entryValues="@array/pref_listen_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_listen_list" />

    <ListPreference
        android:icon="@mipmap/ic_action_cl"
        android:defaultValue="2"
        android:entries="@array/default_listen_time_titles"
        android:entryValues="@array/default_listen_time_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_listen_time" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:icon="@mipmap/ic_action_notification"
        android:capitalize="words"
        android:defaultValue="@string/pref_title_notifications_filter"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_notifications_filter" />

    <ListPreference
        android:icon="@mipmap/ic_action_time"
        android:defaultValue="0"
        android:entries="@array/pref_pause_time"
        android:entryValues="@array/pref_pause_time_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_pause_time" />

</PreferenceScreen>

